# obs-plugin

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
.github/scripts/utils.zsh/: read_codesign_pass
.github/workflows/: build-project.yaml  push.yaml
cmake/macos/resources/: create-package.cmake.in
src/: plugin-main.mm  plugin-support.h  vcamcamera.hpp  vcamcamera.mm
